--- a/AdditionalActivities/Properties/Resources.resx
+++ b/AdditionalActivities/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="accHours" xml:space="preserve">
+    <value>Horas acumuladas</value>
+  </data>
   <data name="activities" xml:space="preserve">
     <value>Atividades</value>
   </data>
@@ -126,8 +129,20 @@
   <data name="activityItems" xml:space="preserve">
     <value>Atividades</value>
   </data>
+  <data name="approvation" xml:space="preserve">
+    <value>Aprovação</value>
+  </data>
   <data name="certif" xml:space="preserve">
     <value>Certificado</value>
+  </data>
+  <data name="course" xml:space="preserve">
+    <value>Curso</value>
+  </data>
+  <data name="defHours" xml:space="preserve">
+    <value>Horas deferidas</value>
+  </data>
+  <data name="delDate" xml:space="preserve">
+    <value>Data da entrega</value>
   </data>
   <data name="delete" xml:space="preserve">
     <value>Excluir</value>
@@ -138,16 +153,25 @@
   <data name="error" xml:space="preserve">
     <value>Erro</value>
   </data>
-  <data name="hrStep" xml:space="preserve">
+  <data name="evalDate" xml:space="preserve">
+    <value>Data da avaliação</value>
+  </data>
+  <data name="evaluator" xml:space="preserve">
+    <value>Avaliador</value>
+  </data>
+  <data name="hours" xml:space="preserve">
+    <value>Horas</value>
+  </data>
+  <data name="hourStep" xml:space="preserve">
     <value>Passo de horas</value>
   </data>
   <data name="id" xml:space="preserve">
     <value>ID</value>
   </data>
-  <data name="maxHr" xml:space="preserve">
+  <data name="maxHours" xml:space="preserve">
     <value>Horas máximas</value>
   </data>
-  <data name="minHr" xml:space="preserve">
+  <data name="minHours" xml:space="preserve">
     <value>Horas mínimas</value>
   </data>
   <data name="name" xml:space="preserve">
@@ -159,16 +183,31 @@
   <data name="portfolios" xml:space="preserve">
     <value>Portifólios</value>
   </data>
+  <data name="regNumber" xml:space="preserve">
+    <value>Prontuário</value>
+  </data>
+  <data name="regState" xml:space="preserve">
+    <value>Estado da matrícula</value>
+  </data>
   <data name="rules" xml:space="preserve">
     <value>Regras</value>
   </data>
   <data name="saveError" xml:space="preserve">
     <value>Não foi possível salvar.</value>
   </data>
+  <data name="schedHours" xml:space="preserve">
+    <value>Horas pleiteadas</value>
+  </data>
+  <data name="semester" xml:space="preserve">
+    <value>Semestre</value>
+  </data>
   <data name="students" xml:space="preserve">
     <value>Alunos</value>
   </data>
   <data name="title" xml:space="preserve">
     <value>Título</value>
+  </data>
+  <data name="year" xml:space="preserve">
+    <value>Ano</value>
   </data>
 </root>
