--- a/AdditionalActivities/Properties/Resources.resx
+++ b/AdditionalActivities/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="databaseConnection" xml:space="preserve">
+    <value>Server=localhost; Database=activities; Uid=ifsp; Pwd=ifsp</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="icon_slogan" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\icon_slogan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
